<resources>
	<string name="app_name">Start-up Screen</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="rello_string">Rello</string>
	<string name="create_an_account_string">Create an Account</string>
	<string name="have_an_account_already__log_in_string">Have an account already? Log in</string>
	<string name="continue_ek1_string">CONTINUE</string>
	<string name="full_name_string">Full Name</string>
	<string name="email_string">Email</string>
	<string name="password_string">Password</string>
	<string name="confirm_password_string">Confirm Password</string>
	<string name="create_an_account_ek1_string">Create an Account</string>
	<string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy_string">By creating an account you agree to our\
Terms of Service and Privacy Policy</string>
	<string name="rello_ek1_string">Rello</string>
	<string name="_09_09_1987_string">09/09/1987</string>
	<string name="date_of_birth_string">Date of Birth</string>
	<string name="united_states_string">United States</string>
	<string name="country_region_string">Country/Region</string>
	<string name="california_string">California</string>
	<string name="state_string">State</string>
	<string name="roseville_string">Roseville</string>
	<string name="city_string">City</string>
	<string name="personal_information_ek1_string">Personal Information</string>
	<string name="continue_ek2_string">CONTINUE</string>
	<string name="_497_evergreen_rd__string">497 Evergreen Rd.</string>
	<string name="street_string">Street</string>
	<string name="continue_ek4_string">CONTINUE</string>
	<string name="rello_ek2_string">Rello</string>
	<string name="johndoe_mail_com_string">johndoe@mail.com</string>
	<string name="_________string"></string>
	<string name="e_mail_string">E-mail</string>
	<string name="password_ek1_string">Password</string>
	<string name="continue_ek6_string">CONTINUE</string>
	<string name="or_string">OR</string>
	<string name="log_in_with_string">Log in with</string>
	<string name="discover_string">Discover</string>
	<string name="find_local_events_happening_near_you_and_post_your_hosted_events__string">Find local events happening near you and post your hosted events.</string>
	<string name="groups_string">Groups</string>
	<string name="find_all_of_your_groups__you_can_also_join_other_groups_and_create_your_own_groups_under_this_tab__string">Find all of your groups. You can also join other groups and create your own groups under this tab.</string>
	<string name="chat_string">Chat</string>
	<string name="chat_with_those_in_your_group__string">Chat with those in your group.</string>
	<string name="calendar_string">Calendar</string>
	<string name="keep_track_of_events_you_and_your_friends_are_going_to__string">Keep track of events you and your friends are going to.</string>
	<string name="let_s_start_string">LETS START</string>
	<string name="rello_ek3_string">Rello</string>
	<string name="excellent__string">Excellent!</string>
	<string name="you_re_now_ready_to_create__your_first_group__string">Youre now ready to create \
your first group.</string>
	<string name="create_new_group_string">Create new group</string>
	<string name="or_ek1_string">OR</string>
	<string name="join_existing_group_string">Join existing group</string>
	<string name="group__creation_string">Group \
Creation</string>
	<string name="calgary_hiker_s_club_string">Calgary Hikers Club</string>
	<string name="group_name_string">Group name</string>
	<string name="group_description_string">Group Description</string>
	<string name="this_is_the_hiker_s_club_in_calgary________string">This is the Hikers Club in Calgary.......</string>
	<string name="group_profile_picture_string">Group Profile Picture</string>
	<string name="__max_150_characters__string">(Max 150 characters)</string>
	<string name="upload_group_profile_picture_string">Upload Group Profile Picture</string>
	<string name="create_group_ek3_string">Create group</string>
	<string name="desert_rebels_string">Desert Rebels</string>
	<string name="calgary_hiker_s_club_ek1_string">Calgary Hikers Club</string>
	<string name="dribblers_string">Dribblers</string>
	<string name="the_maxwells_string">The Maxwells</string>
	<string name="night_sky_watchers_string">Night Sky Watchers</string>
	<string name="honey_makers_string">Honey Makers</string>
	<string name="create_new_group_ek1_string">Create New Group</string>
	<string name="join_more_groups_string">Join more Groups</string>
	<string name="your_groups_string">Your Groups</string>
	<string name="_29_string">29</string>
	<string name="_30_string">30</string>
	<string name="_31_string">31</string>
	<string name="_24_ek1_string">24</string>
	<string name="_22_string">22</string>
	<string name="_23_string">23</string>
	<string name="_25_string">25</string>
	<string name="_15_string">15</string>
	<string name="_16_string">16</string>
	<string name="_17_string">17</string>
	<string name="_18_string">18</string>
	<string name="_19_string">19</string>
	<string name="_20_string">20</string>
	<string name="_21_string">21</string>
	<string name="_8_string">8</string>
	<string name="_9_string">9</string>
	<string name="_10_string">10</string>
	<string name="_11_string">11</string>
	<string name="_12_string">12</string>
	<string name="_13_string">13</string>
	<string name="_14_string">14</string>
	<string name="_1_string">1</string>
	<string name="_5_string">5</string>
	<string name="_6_string">6</string>
	<string name="_7_string">7</string>
	<string name="_2_string">2</string>
	<string name="_3_string">3</string>
	<string name="_4_string">4</string>
	<string name="nov_string">Nov</string>
	<string name="your_scheduled_events_string">Your Scheduled Events</string>
	<string name="_29_ek1_string">29</string>
	<string name="_30_ek1_string">30</string>
	<string name="_31_ek1_string">31</string>
	<string name="_24_ek3_string">24</string>
	<string name="_22_ek1_string">22</string>
	<string name="_23_ek1_string">23</string>
	<string name="_25_ek1_string">25</string>
	<string name="_26_string">26</string>
	<string name="_27_string">27</string>
	<string name="_28_string">28</string>
	<string name="_15_ek1_string">15</string>
	<string name="_16_ek1_string">16</string>
	<string name="_17_ek1_string">17</string>
	<string name="_18_ek1_string">18</string>
	<string name="_19_ek1_string">19</string>
	<string name="_20_ek1_string">20</string>
	<string name="_21_ek1_string">21</string>
	<string name="_8_ek1_string">8</string>
	<string name="_9_ek1_string">9</string>
	<string name="_10_ek1_string">10</string>
	<string name="_11_ek1_string">11</string>
	<string name="_12_ek1_string">12</string>
	<string name="_13_ek1_string">13</string>
	<string name="_14_ek1_string">14</string>
	<string name="_1_ek1_string">1</string>
	<string name="_5_ek2_string">5</string>
	<string name="_6_ek2_string">6</string>
	<string name="_7_ek2_string">7</string>
	<string name="_2_ek1_string">2</string>
	<string name="_3_ek1_string">3</string>
	<string name="_4_ek1_string">4</string>
	<string name="oct_string">Oct</string>
	<string name="memories_string">MEMORIES</string>
	<string name="__134_more_string">+134 more</string>
	<string name="rello_ek4_string">Rello</string>
	<string name="___ek2_string"> </string>
	<string name="john_doe_string">John Doe</string>
	<string name="san_francisco__ca_string">San Francisco, CA</string>
	<string name="upcoming_events_string">Upcoming Events</string>
	<string name="__6_more_string">+6 more</string>
	<string name="calgary_hiker_s_club_ek2_string">Calgary Hikers Club</string>
	<string name="new_message_received_string">New message received</string>
	<string name="desert_rebels__string">Desert Rebels </string>
	<string name="new_message_received_ek1_string">New message received</string>
	<string name="dribblers_ek1_string">Dribblers</string>
	<string name="new_message_received_ek2_string">New message received</string>
	<string name="the_maxwells_ek1_string">The Maxwells</string>
	<string name="new_message_received_ek3_string">New message received</string>
	<string name="night_sky_watchers_ek1_string">Night Sky Watchers</string>
	<string name="new_message_received_ek4_string">New message received</string>
	<string name="honey_makers_ek1_string">Honey Makers</string>
	<string name="new_message_received_ek5_string">New message received</string>
	<string name="xxxxxxxxxxxx_string">XXXXXXXXXXXX</string>
	<string name="new_message_received_ek6_string">New message received</string>
	<string name="xxxxxxxxxxxxxxxx_string">XXXXXXXXXXXXXXXX</string>
	<string name="new_message_received_ek7_string">New message received</string>
	<string name="xxxxxxxxxxxxxxxxxx_string">XXXXXXXXXXXXXXXXXX</string>
	<string name="new_message_received_ek8_string">New message received</string>
	<string name="xxxxxxxxxxxxx_string">XXXXXXXXXXXXX</string>
	<string name="new_message_received_ek9_string">New message received</string>
	<string name="xxxxxxxxxxxxxxxxx_string">XXXXXXXXXXXXXXXXX</string>
	<string name="new_message_received_ek10_string">New message received</string>
	<string name="your_messages_string">Your Messages</string>
	<string name="group_chats_string">Group Chats</string>
	<string name="event_chats_string">Event Chats</string>
	<string name="who_s_online_string">Whos online</string>
	<string name="__p__lorem_ipsum_dolor_sit_amet__consectetur_adipisicing_elit__sed_do_eiusmod_tempor__string">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</string>
	<string name="sed_do_eiusmod_tempor__string">Sed do eiusmod tempor.</string>
	<string name="excepteur_sint_occaecat_cupidatat_non_proident__string">Excepteur sint occaecat cupidatat non proident.</string>
	<string name="monday__10_40_am_string">Monday, 10:40 am</string>
	<string name="__p__lorem_ipsum_dolor_sit_amet__consectetur_adipisicing_elit__sed_do_eiusmod_tempor__ek1_string">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</string>
	<string name="sed_do_eiusmod_tempor__ek1_string">Sed do eiusmod tempor.</string>
	<string name="excepteur_sint_occaecat_cupidatat_non_proident__ek1_string">Excepteur sint occaecat cupidatat non proident.</string>
	<string name="monday__10_40_am_ek1_string">Monday, 10:40 am</string>
	<string name="send_string">SEND</string>
	<string name="say_something__string">Say something</string>
	<string name="calgary_hiker_s_club_ek3_string">Calgary Hikers Club</string>
	<string name="skydiving_session_3_string">Skydiving Session 3</string>
	<string name="new_message_received_ek11_string">New message received</string>
	<string name="snowboarding_december_string">Snowboarding December</string>
	<string name="new_message_received_ek12_string">New message received</string>
	<string name="basketball_tournament_string">Basketball Tournament</string>
	<string name="new_message_received_ek13_string">New message received</string>
	<string name="nascar_racing_string">NASCAR Racing</string>
	<string name="new_message_received_ek14_string">New message received</string>
	<string name="camping__string">Camping </string>
	<string name="new_message_received_ek15_string">New message received</string>
	<string name="__sailing_string"> Sailing</string>
	<string name="new_message_received_ek16_string">New message received</string>
	<string name="xxxxxxxxxxxx_ek1_string">XXXXXXXXXXXX</string>
	<string name="new_message_received_ek17_string">New message received</string>
	<string name="xxxxxxxxxxxxxxxx_ek1_string">XXXXXXXXXXXXXXXX</string>
	<string name="new_message_received_ek18_string">New message received</string>
	<string name="your_messages_ek1_string">Your Messages</string>
	<string name="group_chats_ek1_string">Group Chats</string>
	<string name="event_chats_ek1_string">Event Chats</string>
	<string name="who_s_online_ek1_string">Whos online</string>
    <string name="back_sign2">back_sign2</string>
    <string name="rello_logo">rello_logo</string>
</resources>