<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		start_up_screen
	 *	@date 		0
	 *	@title 		Start-up Screen
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.9.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/sign_up_2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="640dp" >





			<RelativeLayout android:id="@+id/page_sign_up_2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__sign_up_2_ek2"
					android:background="@drawable/_bg__sign_up_2_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/personal_information"
					android:layout_marginTop="62dp"
					android:layout_marginStart="20dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/input_ek5"
						android:layout_marginTop="56dp"
						android:layout_marginStart="21dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/input_ek6"
							android:layout_marginTop="2dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/rectangle_1408"
								android:background="@drawable/rectangle_1408_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="17dp"
								android:layout_width="277dp"
								android:layout_height="46dp" />

							<TextView android:id="@+id/_09_09_1987"
								android:fontFamily="Arial"
								android:textSize="14sp"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="33dp"
								android:layout_width="75dp"
								android:layout_height="19dp"
								android:text="@string/_09_09_1987_string"
								 />

							<TextView android:id="@+id/date_of_birth"
								android:fontFamily="Arial"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="61dp"
								android:layout_height="13dp"
								android:text="@string/date_of_birth_string"
								 />


							<RelativeLayout android:id="@+id/symbol_156___9"
								android:layout_marginTop="36dp"
								android:layout_marginStart="253dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/path_36"
									android:src="@drawable/path_36"
									android:contentDescription="path_36"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="2dp"
									android:layout_width="9.4000244140625dp"
									android:layout_height="6.1000061035156dp" />

								<View android:id="@+id/rectangle_1467"
									android:background="@drawable/rectangle_1467_shape"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="10dp"
									android:layout_height="10dp" />

							</RelativeLayout>

						</RelativeLayout>


						<RelativeLayout android:id="@+id/input_ek7"
							android:layout_marginTop="81dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/rectangle_1409"
								android:background="@drawable/rectangle_1409_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="17dp"
								android:layout_width="277dp"
								android:layout_height="46dp" />

							<TextView android:id="@+id/united_states"
								android:fontFamily="Arial"
								android:textSize="14sp"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="33dp"
								android:layout_width="89dp"
								android:layout_height="19dp"
								android:text="@string/united_states_string"
								 />

							<TextView android:id="@+id/country_region"
								android:fontFamily="Arial"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="74dp"
								android:layout_height="13dp"
								android:text="@string/country_region_string"
								 />


							<RelativeLayout android:id="@+id/symbol_156___10"
								android:layout_marginTop="36dp"
								android:layout_marginStart="253dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/path_36_ek1"
									android:src="@drawable/path_36_ek1"
									android:contentDescription="path_36_ek1"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="2dp"
									android:layout_width="9.4000244140625dp"
									android:layout_height="6.1000061035156dp" />

								<View android:id="@+id/rectangle_1467_ek1"
									android:background="@drawable/rectangle_1467_ek1_shape"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="10dp"
									android:layout_height="10dp" />

							</RelativeLayout>

						</RelativeLayout>


						<RelativeLayout android:id="@+id/input_ek8"
							android:layout_marginTop="160dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/rectangle_1410"
								android:background="@drawable/rectangle_1410_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="17dp"
								android:layout_width="277dp"
								android:layout_height="46dp" />

							<TextView android:id="@+id/california"
								android:fontFamily="Arial"
								android:textSize="14sp"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="33dp"
								android:layout_width="64dp"
								android:layout_height="19dp"
								android:text="@string/california_string"
								 />

							<TextView android:id="@+id/state"
								android:fontFamily="Arial"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="28dp"
								android:layout_height="13dp"
								android:text="@string/state_string"
								 />


							<RelativeLayout android:id="@+id/symbol_156___11"
								android:layout_marginTop="36dp"
								android:layout_marginStart="253dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/path_36_ek2"
									android:src="@drawable/path_36_ek2"
									android:contentDescription="path_36_ek2"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="2dp"
									android:layout_width="9.4000244140625dp"
									android:layout_height="6.1000061035156dp" />

								<View android:id="@+id/rectangle_1467_ek2"
									android:background="@drawable/rectangle_1467_ek2_shape"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="10dp"
									android:layout_height="10dp" />

							</RelativeLayout>

						</RelativeLayout>


						<RelativeLayout android:id="@+id/input_ek9"
							android:layout_marginTop="239dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/rectangle_1410_ek1"
								android:background="@drawable/rectangle_1410_ek1_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="17dp"
								android:layout_width="277dp"
								android:layout_height="46dp" />

							<TextView android:id="@+id/roseville"
								android:fontFamily="Arial"
								android:textSize="14sp"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="33dp"
								android:layout_width="62dp"
								android:layout_height="19dp"
								android:text="@string/roseville_string"
								 />

							<TextView android:id="@+id/city"
								android:fontFamily="Arial"
								android:textColor="@color/_09_09_1987_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="22dp"
								android:layout_height="13dp"
								android:text="@string/city_string"
								 />


							<RelativeLayout android:id="@+id/symbol_156___12"
								android:layout_marginTop="36dp"
								android:layout_marginStart="253dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/path_36_ek3"
									android:src="@drawable/path_36_ek3"
									android:contentDescription="path_36_ek3"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="2dp"
									android:layout_width="9.4000244140625dp"
									android:layout_height="6.1000061035156dp" />

								<View android:id="@+id/rectangle_1467_ek3"
									android:background="@drawable/rectangle_1467_ek3_shape"
									 android:layout_marginLeft="0dp"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="10dp"
									android:layout_height="10dp" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

					<TextView android:id="@+id/personal_information_ek1"
						android:fontFamily="Arial"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="14sp"
						android:textColor="@color/personal_information_ek1_color"
						android:layout_marginLeft="89dp"
						android:layout_marginTop="0dp"
						android:layout_width="145dp"
						android:layout_height="19dp"
						android:text="@string/personal_information_ek1_string"
						 />


					<RelativeLayout android:id="@+id/button"
						android:layout_marginTop="525dp"
						android:layout_marginStart="135dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/continue_ek2"
							android:fontFamily="Arial"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textColor="@color/continue_ek1_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="57dp"
							android:layout_height="13dp"
							android:text="@string/continue_ek2_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/input_ek10"
						android:layout_marginTop="399dp"
						android:layout_marginStart="21dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View android:id="@+id/rectangle_143"
							android:background="@drawable/rectangle_143_shape"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="19dp"
							android:layout_width="277dp"
							android:layout_height="46dp" />

						<TextView android:id="@+id/_497_evergreen_rd_"
							android:fontFamily="Arial"
							android:textSize="14sp"
							android:textColor="@color/_497_evergreen_rd__color"
							android:layout_marginLeft="20dp"
							android:layout_marginTop="35dp"
							android:layout_width="123dp"
							android:layout_height="19dp"
							android:text="@string/_497_evergreen_rd__string"
							 />

						<TextView android:id="@+id/street"
							android:fontFamily="Arial"
							android:textSize="12sp"
							android:textColor="@color/street_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="37dp"
							android:layout_height="16dp"
							android:text="@string/street_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/continue_ek3"
						android:layout_marginTop="511dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View android:id="@+id/rectangle_119_ek1"
							android:background="@drawable/rectangle_119_ek1_shape"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="320dp"
							android:layout_height="35dp" />

						<TextView android:id="@+id/continue_ek4"
							android:fontFamily="Arial"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textColor="@color/continue_ek1_color"
							android:layout_marginLeft="132dp"
							android:layout_marginTop="12dp"
							android:layout_width="57dp"
							android:layout_height="13dp"
							android:text="@string/continue_ek4_string"
							 />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/backward_arrow_ek1"
					android:layout_marginTop="19dp"
					android:layout_marginStart="9dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/path_10_ek1"
						android:src="@drawable/path_10_ek1"
						android:contentDescription="path_10_ek1"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="16dp"
						android:layout_height="16dp" />

				</RelativeLayout>

			</RelativeLayout>












		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>