<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		start_up_screen
	 *	@date 		0
	 *	@title 		Start-up Screen
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.9.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/log_in" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="640dp" >





			<RelativeLayout android:id="@+id/page_log_in_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="0dp"
				tools:ignore="UselessParent">



				<View
					android:id="@+id/_bg__log_in_ek2"
					android:layout_width="360dp"
					android:layout_height="640dp"
					android:layout_marginStart="0dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:background="@color/rectangle_1473_ek11_color" />

				<View
					android:id="@+id/rectangle_1468_ek1"
					android:layout_width="match_parent"
					android:layout_height="194dp"
					android:layout_marginStart="0dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:background="@color/colorPrimaryDark" />

				<Button
					android:id="@+id/back_sign2"
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:layout_marginStart="5dp"
					android:layout_marginLeft="5dp"
					android:layout_marginTop="10dp"
					android:background="#FFC107"
					android:contentDescription="@string/back_sign2"
					android:foreground="@android:drawable/ic_menu_revert"
					tools:ignore="UnusedAttribute"
					tools:targetApi="m" />


				<ImageView
					android:id="@+id/imageView9"
					android:layout_width="110dp"
					android:layout_height="119dp"
					android:layout_alignBottom="@+id/rectangle_1468_ek1"
					android:layout_alignParentStart="true"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_marginStart="125dp"
					android:layout_marginLeft="125dp"
					android:layout_marginTop="40dp"
					android:layout_marginEnd="125dp"
					android:layout_marginRight="125dp"
					android:layout_marginBottom="34dp"
					app:srcCompat="@mipmap/rello_logo_round"
					android:contentDescription="@string/rello_logo" />

				<RelativeLayout android:id="@+id/backward_arrow_ek2"
					android:layout_marginTop="19dp"
					android:layout_marginStart="9dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="9dp"/>


				<RelativeLayout android:id="@+id/inputs"
					android:layout_marginTop="255dp"
					android:layout_marginStart="33dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="33dp">


					<RelativeLayout android:id="@+id/inputs_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="0dp">


						<RelativeLayout android:id="@+id/inputs_ek2"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="0dp">

							<View android:id="@+id/rectangle_123"
								android:background="@drawable/rectangle_123_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="291dp"
								android:layout_height="44dp" />

							<EditText
								android:id="@+id/johndoe_mail_com"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_alignParentStart="true"
								android:layout_alignParentLeft="true"
								android:layout_alignParentTop="true"
								android:layout_alignParentEnd="true"
								android:layout_alignParentRight="true"
								android:layout_marginStart="24dp"
								android:layout_marginLeft="24dp"
								android:layout_marginTop="5dp"
								android:layout_marginEnd="220dp"
								android:layout_marginRight="220dp"
								android:importantForAutofill="no"
								android:inputType="textEmailAddress"
								android:text="@string/e_mail_string"
								android:textColor="@color/_09_09_1987_color"
								android:textSize="14sp"
								tools:ignore="LabelFor" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/inputs_ek3"
							android:layout_marginTop="88dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="0dp">

							<View android:id="@+id/rectangle_123_ek1"
								android:background="@drawable/rectangle_123_ek1_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="291dp"
								android:layout_height="44dp" />

							<EditText
								android:id="@+id/________"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_alignParentStart="true"
								android:layout_alignParentLeft="true"
								android:layout_alignParentTop="true"
								android:layout_marginStart="24dp"
								android:layout_marginLeft="25dp"
								android:layout_marginTop="5dp"
								android:inputType="textPassword"
								android:text="@string/confirm_password_string"
								android:textColor="@color/_09_09_1987_color"
								android:textSize="14sp"
								android:importantForAutofill="no"
								tools:ignore="LabelFor" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<TextView
					android:id="@+id/e_mail"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="62dp"
					android:layout_marginTop="229dp"
					android:text="@string/e_mail_string"
					android:textColor="@color/create_an_account_ek1_color"
					android:textSize="19sp"
					android:layout_marginStart="62dp" />

				<TextView
					android:id="@+id/password_ek1"
					android:layout_width="151dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="62dp"
					android:layout_marginTop="317dp"
					android:text="@string/password_ek1_string"
					android:textColor="@color/create_an_account_ek1_color"
					android:textSize="19sp"
					android:layout_marginStart="62dp" />


				<RelativeLayout android:id="@+id/continue_ek5"
					android:layout_marginTop="426dp"
					android:layout_marginStart="20dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp">

					<Button
						android:id="@+id/continue_login"
						android:layout_width="134dp"
						android:layout_height="match_parent"
						android:layout_alignParentStart="true"
						android:layout_alignParentLeft="true"
						android:layout_alignParentTop="true"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_marginStart="97dp"
						android:layout_marginLeft="97dp"
						android:layout_marginTop="2dp"
						android:layout_marginEnd="109dp"
						android:layout_marginRight="109dp"
						android:background="#063458"
						android:text="@string/continue_ek1_string"
						android:textColor="#FFC107"
						android:visibility="visible" />

				</RelativeLayout>


			</RelativeLayout>










		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>